--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
 *.xcuserstate
-WeatherApp.xcodeproj/project.xcworkspace/xcuserdata/oskarbiwejnis.xcuserdatad/
-UserInterfaceState.xcuserstate
+WeatherApp.xcodeproj/project.xcworkspace/xcuserdata/oskarbiwejnis.xcuserdatad/UserInterfaceState.xcuserstate
 Pods
