--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 *.xcuserstate
 WeatherApp.xcodeproj/project.xcworkspace/xcuserdata/oskarbiwejnis.xcuserdatad/UserInterfaceState.xcuserstate
 Pods
+*.generated.swift
