--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -40,6 +40,7 @@ excluded:
   - Cosmos/Generated
   - Modules
   - vendor
+  - WeatherApp/Services/StorageService.swift
 file_length:
   warning: 500
   error: 700
