Nearly finished tests, generated mocks using SwiftyMocky, relocated sourcery templates and manually added "import Combine" to them

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -41,6 +41,7 @@ excluded:
   - Modules
   - vendor
   - WeatherApp/Services/StorageService.swift
+  - WeatherAppTests/Convenience/Mock.generated.swift
 file_length:
   warning: 500
   error: 700
